--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ input[type="text"] {
 }
 
 body {
-  background-image: url("../img/photo-1591105327764-4c4b76f9e6a0.jpeg");
+  background-image: url("../images (3).jpeg");
   background-size: cover;
   background-attachment: fixed
 }
